  https://github.com/ocaml/ocaml/pull/$N

The form #$N indicates an issue on the github ocamlbuild repository,
  https://github.com/ocaml/ocamlbuild/issues/$N
  https://github.com/ocaml/ocamlbuild/pulls/$N
We also use PR#$N for pull requests.

Changes breaking compatibility are marked with a "* " bullet instead
of the usual "- ".

NEXT_RELEASE:
-------------

0.10.0 (25 Dec 2016):
---------------------

OCamlbuild 0.10.0 introduces a minor change to the way `.cmxs` files
are produced when no `.mldylib` file is absent: it will now use the
exact same semantics as `.cmxa` and `.mllib` file -- in particular, it
should not be necessary anymore to have identical
`foo.{mllib,mldylib}` files, only `foo.mllib` should suffice. See the
detailed Changelog for details.

- #111: added "nostdlib" flag for corresponding ocaml{c,opt} options
  (Thomas Wood)

- #115: add `node_modules` to the list of directories ignored by default
  (.svn/, CVS/, .bzr/, .hg/, .git/, _darcs/, node_modules/)
  (Yunxing Dai)

- #125: added "-toolchain" option for corresponding ocamlfind option.
  (whitequark)

- #127: install ocamlbuild's man pages, missing since 4.02
  (Gabriel Scherer)

- #130: make sure that -just-plugin always stops after the plugin-build phase
  (Gabriel Scherer, report by whitequark)

* #132: remove the rule ".cmx -> .cmxs"
  Previously, there was a ".cmx -> .cmxa" rule that would
  pull a module and its dependencies in a .cmxa, and a separate
  ".cmx -> .cmxs" rule that would pull only a module as a .cmxs.

  The latter is a reasonable default choice, the idea being that a module's
  dependencies may often be statically linked with the program instead of being
  dynamically linked. But it conflicts with the presence of a rule ".cmxa -> .cmxs"
  as soon as the library has the same name as one of the modules it contains.

  The reason why the rule ".cmxa -> .cmxs" matter is that it can be composed
  with the rule ".mllib -> .cmxa" to build .cmxs files from .mllib files, without